force-app/main/default/objects/FieloEE__ErrorLog__c/FieloEE__ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Relevant information registered when an unexpected error occurs. This is a Fielo’s internal object.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>