force-app/main/default/objects/FieloEE__ErrorLog__c/fields/FieloEE__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__LineNumber__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>