force-app/main/default/objects/FieloEE__ErrorLog__c/fields/FieloEE__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>