force-app/main/default/objects/FieloEE__ErrorLog__c/listViews/FieloEE__All_Error_Logs.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Error Logs</label>
    <language>en_US</language>
</ListView>